--- a/Section 13/195/index.html
+++ b/Section 13/195/index.html
@@ -155,9 +155,7 @@
             <span>03</span>Instant Closing
           </button>
         </div>
-        <div
-          class="operations__content operations__content--1 operations__content--active"
-        >
+        <div class="operations__content operations__content--1 operations__content--active">
           <div class="operations__icon operations__icon--1">
             <svg>
               <use xlink:href="img/icons.svg#icon-upload"></use>
@@ -173,7 +171,6 @@
             aliquip ex ea commodo consequat.
           </p>
         </div>
-
         <div class="operations__content operations__content--2">
           <div class="operations__icon operations__icon--2">
             <svg>
